Bug 399203 - Krita doesn't exit / quit / closes
Summary: Krita doesn't exit / quit / closes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.1.3
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: joupent
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-29 08:00 UTC by Pierre "bloodywing" Geier
Modified: 2018-10-10 09:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre "bloodywing" Geier 2018-09-29 08:00:25 UTC
Krita doesn't exit when clicking the X Button on your WM. Same for the Exit menu entry and Alt+F4. No Errors on console output. Last time when I checked it, it also affected current Krita master/HEAD.

STEPS TO REPRODUCE
1. Start Krita
2. Try to exit it

SOFTWARE VERSIONS
KDE Plasma Version: 5.12.3
KDE Frameworks Version: 5.43.0
Qt Version: 5.9.4

WORKAROUND
killall krita
or start it on the console and simply ctrl+c when you want to exit

ADDITIONAL INFORMATION
Krita was compiled by me with GCC 7.3.1 and the ebuilds in my Gentoo overlay bloody
Comment 1 Halla Rempt 2018-09-29 14:35:30 UTC
I'm sorry, but I cannot reproduce this on any of my Linux, Windows or macOS systems.
Comment 2 Pierre "bloodywing" Geier 2018-09-30 09:22:47 UTC
Managed to fix it and reproduce it.

Open a file in Krita
Enable "Load last session"
Quit Krita
Remove the file that is referenced in your session
Start Krita, it should complain about the file it can't find.

And now you can't close Krita :)
Comment 3 Emmet O'Neill 2018-10-02 19:50:40 UTC
I haven't been able to reproduce this on Linux.

(Having said that, the "load previous session" doesn't seem to work for me at all, as it doesn't actually load the previous session.)
Comment 4 Pierre "bloodywing" Geier 2018-10-02 22:25:20 UTC
I just tried it with a fresh installed pc and krita 4.1.3

Regarding the sessions. you need to set it to "show session manager" first and create a session there. Otherwise krita never creates a session, not even a default one. After I've got my session I was able to reproduce the same bug again.
Comment 5 joupent 2018-10-09 13:40:22 UTC
Git commit 715ad1317627a2bdd41241ed772fda705a5beffd by Jouni Pentikäinen.
Committed on 09/10/2018 at 13:36.
Pushed by jounip into branch 'master'.

Fix unsuccessful restoring of a session blocking Krita from closing

M  +1    -1    libs/ui/KisPart.cpp
M  +5    -4    libs/ui/KisSessionResource.cpp

https://commits.kde.org/krita/715ad1317627a2bdd41241ed772fda705a5beffd
Comment 6 Halla Rempt 2018-10-10 09:57:34 UTC
Git commit 269bc11497141dd9e545eeaf47a6a890f529e1df by Boudewijn Rempt, on behalf of Jouni Pentikäinen.
Committed on 10/10/2018 at 07:44.
Pushed by rempt into branch 'krita/4.1'.

Fix unsuccessful restoring of a session blocking Krita from closing
(cherry picked from commit 715ad1317627a2bdd41241ed772fda705a5beffd)

M  +1    -1    libs/ui/KisPart.cpp
M  +5    -4    libs/ui/KisSessionResource.cpp

https://commits.kde.org/krita/269bc11497141dd9e545eeaf47a6a890f529e1df