libs/ui/KisPart.cpp
@@ -111,7 +111,7 @@ public:
             }
         }
 
-        return false;
+        return true;
     }
 };
 
